--- a/TODO
+++ b/TODO
@@ -42,3 +42,6 @@
    15. New modules need to inherit the LANGUAGE parameters of all the
        departure modules.
    16. Arrival modules also need new LANGUAGE pragmas from departure modules.
+   17. Make sure there is at least a newline after the last import, and afer
+       the end of the exports.
+
