Remove import of IO, update todo

--- a/TODO
+++ b/TODO
@@ -1,32 +1,10 @@
    2. Convert tests in tests/Tests.hs into real tests
-   5. Intra-decl transformations - (collect ideas)
-          * Move a condition into the called function:
-
-              when flag action
-              action = foo
-
-            becomes
-
-              action flag
-   	   action flag = when flag foo
-
-          * Expand the condition:
-
-              action (f a b)
-   	   action flag = when flag foo
-
-            becomes
-
-              action a b
-   	   action a b = when (f a b) foo
-
    7. Test cases:
          test moving a decl to a new module
          move a decl to a module that imported it (decl1)
          move a decl to a module that didn't import it
          move a decl that is referenced
          move a decl that is unreferenced
-   8. Merge IO into Utils
    11. Why does it sometimes insert the same import several times?
    15. New modules need to inherit the LANGUAGE parameters of all the
        departure modules.
@@ -42,3 +20,4 @@ DONE
 
  * 1. Create new modules
  * 3. Make a nice executable for moving decls, including instances
+ * 8. Merge IO into Utils
