--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@
    17. Make sure there is at least a newline after the last import, and afer
        the end of the exports.
    18. Fix bad ModuleKey values in this:
+   19. Get rid of adjustSpans, FoldM module
 
           runhaskell scripts/Clean --move=withCurrentDirectory,IO,Utils --move=replaceFile,IO,Utils --find=. --find=scripts --find=tests
 
