--- a/TODO
+++ b/TODO
@@ -5,14 +5,9 @@
          move a decl to a module that didn't import it
          move a decl that is referenced
          move a decl that is unreferenced
-   11. Why does it sometimes insert the same import several times?
    15. New modules need to inherit the LANGUAGE parameters of all the
        departure modules.
    16. Arrival modules also need new LANGUAGE pragmas from departure modules.
-   17. Make sure there is at least a newline after the last import, and afer
-       the end of the exports.
-   18. Fix bad ModuleKey values in this:
-   19. Get rid of adjustSpans, FoldM module
    20. In decl3 a Tmp.hs file with no declarations ought to exist after the test
 
           runhaskell scripts/Clean --move=withCurrentDirectory,IO,Utils --move=replaceFile,IO,Utils --find=. --find=scripts --find=tests
@@ -23,3 +18,6 @@ DONE
  * 1. Create new modules
  * 3. Make a nice executable for moving decls, including instances
  * 8. Merge IO into Utils
+ * 17. Make sure there is at least a newline after the last import, and afer
+       the end of the exports.
+ * 19. Get rid of adjustSpans, FoldM module
