--- a/TODO
+++ b/TODO
@@ -12,9 +12,9 @@
 
           runhaskell scripts/Clean --move=withCurrentDirectory,IO,Utils --move=replaceFile,IO,Utils --find=. --find=scripts --find=tests
 
-   21. Fix dangling comma in decl6
    22. Make the string scanning code more efficient
    24. decl1: Why no export of tryfindM in Decls.hs?
+   25. Doing decl7 in "real" source directory gives strange errors
 
 DONE
 
