--- a/TODO
+++ b/TODO
@@ -17,6 +17,11 @@
    25. Doing decl7 in "real" source directory gives strange errors
    26. decl5: comment of first declaration not removed on departure - point
        starts at start of first decl instead of end of last import.
+   27: decl4:
+          1. missing newline before symbolsDeclaredBy block comment
+          2. Comment of a FoldDeclaredBy instance left at EOF
+          3. extra newline before class FoldDeclared block comment
+          4. symbolsDeclaredBy block comment moved to Tmp
 
 DONE
 
