--- a/TODO
+++ b/TODO
@@ -25,8 +25,7 @@
    28. Should there be options to modify imports of library modules that were
        previously changed using Move.hs?  You could use them to document how
        to upgrade clients of your library.  Eh.
-   29. Use fmap (const ()) instead of the simplify types
-   30. Add Scoped to SrcSpanInfo
+   31. Use Scoped info instead of FoldDeclared, HasSymbols, HasCNames, and to implement moveType
 
 DONE
 
@@ -36,3 +35,5 @@ DONE
  * 17. Make sure there is at least a newline after the last import, and afer
        the end of the exports.
  * 19. Get rid of adjustSpans, FoldM module
+   29. Use fmap (const ()) instead of the simplify types
+   30. Add Scoped to SrcSpanInfo
