Add decl8 to test an up move

--- a/TODO
+++ b/TODO
@@ -26,6 +26,7 @@
        previously changed using Move.hs?  You could use them to document how
        to upgrade clients of your library.  Eh.
    31. Use Scoped info instead of FoldDeclared, HasSymbols, HasCNames, and to implement moveType
+   32. Change qualified uses of the symbols of moving declarations
 
 DONE
 
